[package]
name = "opus"
version = "0.1.1"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]

repository = "https://github.com/SpaceManiac/opus-rs"

[dependencies]
opus-sys = { path = "../rust-opus/opus-sys" }
libc = "0.2"
